feat: edit set current page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;500;700&display=swap"
       rel="stylesheet" />
-    >
+
+    <script
+      src="https://kit.fontawesome.com/bd9669bb11.js"
+      crossorigin="anonymous"></script>
     <title>TechTrove</title>
   </head>
   <body>
